--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,4 +32,5 @@ dependencies {
     compile 'com.github.traex.rippleeffect:library:1.3'
     compile project(':libzxing')
     compile files('libs/SwitchLayout1.0.jar')
+    compile 'com.alibaba:fastjson:1.2.11'
 }
