--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,6 +4,12 @@ android {
     compileSdkVersion 23
     buildToolsVersion "23.0.3"
 
+    sourceSets {
+        main {
+            jniLibs.srcDirs = ['libs']
+        }
+    }
+
     defaultConfig {
         applicationId "com.wteam.carkeeper"
         minSdkVersion 14
@@ -26,7 +32,6 @@ dependencies {
     compile 'com.android.support:design:23.4.0'
     compile 'de.hdodenhof:circleimageview:2.0.0'
     compile 'com.android.support:support-v4:23.4.0'
-    compile files('libs/Android_Map_V2.7.20151124.jar')
     compile files('libs/AMap_Location_v2.0.0_20151117.jar')
     compile 'com.loopj.android:android-async-http:1.4.9'
     compile 'com.github.traex.rippleeffect:library:1.3'
@@ -36,4 +41,5 @@ dependencies {
     compile files('libs/AMap_Navi_v1.8.0_20160421.jar')
     compile files('libs/Msc.jar')
     compile files('libs/AMap_Services_V2.7.0_20151125.jar')
+    compile files('libs/AMap_3DMap_V3.2.1_20160225.jar')
 }
