--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,8 +28,8 @@
             android:name="com.amap.api.v2.apikey"
             android:value="af6a373cc47c154bbe385e0bcc9d9c9d" />
 
-        <activity android:name=".map.RouteSelectActivity"
-            android:screenOrientation="portrait"
+        <activity android:name=".map.NaviActivity"
+            android:configChanges="orientation|keyboardHidden|screenSize"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -37,11 +37,16 @@
             </intent-filter>
         </activity>
 
+        <activity android:name=".map.RouteSelectActivity"
+            android:screenOrientation="portrait"
+            android:theme="@style/AppTheme.NoActionBar" />
+
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar">
+
         </activity>
 
         <activity
