--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,7 +39,7 @@ dependencies {
     compile 'com.alibaba:fastjson:1.2.11'
     compile files('libs/AMap_Navi_v1.8.0_20160421.jar')
     compile files('libs/Msc.jar')
-    compile files('libs/AMap_Services_V2.7.0_20151125.jar')
     compile files('libs/AMap_3DMap_V3.2.1_20160225.jar')
     compile files('libs/AMap_Location_v2.3.0_20160112.jar')
+    compile files('libs/AMap_Search_V3.2.1_20160308.jar')
 }
