--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,4 +42,6 @@ dependencies {
     compile files('libs/AMap_3DMap_V3.2.1_20160225.jar')
     compile files('libs/AMap_Location_v2.3.0_20160112.jar')
     compile files('libs/AMap_Search_V3.2.1_20160308.jar')
+    compile 'com.google.android.gms:play-services-appindexing:8.1.0'
+    compile 'com.soundcloud.android:android-crop:1.0.1@aar'
 }
