--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -35,6 +35,7 @@
         <activity android:name=".map.NaviActivity"
             android:configChanges="orientation|keyboardHidden|screenSize"
             android:theme="@style/AppTheme.NoActionBar">
+
         </activity>
 
         <activity android:name=".map.RouteSelectActivity"
@@ -46,10 +47,6 @@
             android:label="@string/app_name"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
 
         <activity android:name=".music.MusicPlayActivity"
@@ -61,7 +58,12 @@
         <activity
             android:name=".personcenter.LoginActivity"
             android:screenOrientation="portrait"
-            android:theme="@style/AppTheme.NoActionBar.Animation" />
+            android:theme="@style/AppTheme.NoActionBar.Animation" >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
 
         <activity
             android:name=".personcenter.RegisterActivity"
@@ -89,7 +91,9 @@
         <activity
             android:name=".personcenter.OrderManagementActivity"
             android:screenOrientation="portrait"
-            android:theme="@style/AppTheme.NoActionBar" />
+            android:theme="@style/AppTheme.NoActionBar" >
+
+        </activity>
 
         <activity
             android:name=".personcenter.OrderDetailActivity"
@@ -104,8 +108,7 @@
         <activity
             android:name=".personcenter.ReservationActivity"
             android:screenOrientation="portrait"
-            android:theme="@style/AppTheme.NoActionBar">
-        </activity>
+            android:theme="@style/AppTheme.NoActionBar" />
 
         <activity
             android:name=".personcenter.IllegalInfoActivity"
