--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,4 +44,6 @@ dependencies {
     compile files('libs/AMap_Search_V3.2.1_20160308.jar')
     compile 'com.google.android.gms:play-services-appindexing:8.1.0'
     compile 'com.soundcloud.android:android-crop:1.0.1@aar'
+    compile 'com.nostra13.universalimageloader:universal-image-loader:1.9.5'
+    compile files('libs/jpush-android-2.1.5.jar')
 }
